--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </header>
 
   <main>
-    <div class="photo-placeholder">
-      <span>(photo)</span>
+    <div class="photo-container">
+      <img src="webpage-photo.png" alt="Sanpo preview" />
     </div>
   </main>
 </body>
