--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <nav>
       <a href="#">about</a>
       <a href="#">development</a>
-      <a href="download.html">download</a>
+      <a href="#">download</a>
     </nav>
   </header>
 
   <main>
-    <div class="photo-placeholder">
-      <span>(photo)</span>
+    <div class="photo-container">
+      <img src="webpage-photo.png" alt="Sanpo preview" />
     </div>
   </main>
 </body>
