--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
       <a href="#">about</a>
       <a href="#">development</a>
-      <a href="#">download</a>
+      <a href="download.html">download</a>
     </nav>
   </header>
 
