--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <a href="download.html">download</a>
     </nav>
   </header>
-
-  <main>
-    <div class="photo-container">
-      <img src="webpage-photo.png" alt="Sanpo preview" />
-    </div>
-  </main>
+<main>
+  <p class="photo-note">higher quality photo coming soon</p>
+  <div class="photo-container">
+    <img src="webpage-photo.png" alt="Sanpo preview" />
+  </div>
+</main>
 </body>
 </html>
