--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
   </header>
 <main>
-  <p class="photo-note">higher quality photo coming soon</p>
+  <p class="photo-note">(higher quality photo coming soon)</p>
   <div class="photo-container">
     <img src="webpage-photo.png" alt="Sanpo preview" />
   </div>
