--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>exploring tokyo's neighborhoods</p>
     <nav>
       <a href="#">about</a>
-      <a href="#">development</a>
+      <a href="development.html">development</a>
       <a href="download.html">download</a>
     </nav>
   </header>
