--- a/development.html
+++ b/development.html
@@ -1,3 +1,8 @@
+<header>
+  <h1>sanpo</h1>
+  <p>exploring tokyo's neighborhoods</p>
+</header>
+
 <main class="development-content">
   <h2>What's Nearby</h2>
   <p>
