--- a/development.html
+++ b/development.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Download – Sanpo</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1>sanpo</h1>
+    <p>exploring tokyo's neighborhoods</p>
+  </header>
 <main class="development-content">
   <h2>What's Nearby</h2>
   <p>
