--- a/development.html
+++ b/development.html
@@ -17,6 +17,6 @@
     Discover hidden local gems just steps away — from quiet cafes and bookshops to shrines and sentos — based on where you're staying.
   </p>
 <video controls width="100%">
-  <source src="sanpo-demo.mp4" type="video/mp4" />
+  <source src="What's Nearby - demo.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
