--- a/development.html
+++ b/development.html
@@ -20,3 +20,12 @@
   <source src="What's Nearby - demo.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
+<h2>Save Places</h2>
+<p>
+  Tap to save your favorite spots as you explore — whether it's a hidden soba shop or a peaceful sento.
+  Build your own collection of places to revisit later.
+</p>
+<video controls width="100%">
+  <source src="my location & saved places - demo.mp4" type="video/mp4" />
+  Your browser does not support the video tag.
+</video>
