--- a/download.html
+++ b/download.html
@@ -16,8 +16,8 @@
     <h2>We're using AltServer</h2>
     <p>
       We're still building a test version to download. It will be uploaded on AltServer.
-      You'll need AltServer downloaded on your laptop and phone to try the software.
-      Find some more instructions <a href="https://altstore.io" target="_blank">here</a>.
+      You'll need AltServer on a computer and phone to download and use the software.
+      Find AltServer's website <a href="https://altstore.io" target="_blank">here</a>.
     </p>
   </main>
 </body>
