--- a/development.html
+++ b/development.html
@@ -29,3 +29,11 @@
   <source src="my location & saved places - demo.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
+<section>
+  <h2><strong>Scenarios</strong></h2>
+  <p>Utilize the Scenarios feature if you find yourself in a pinch. Get the rundown on common situations you'll find yourself in — whether it's using a convenience store or navigating the public transportation system.</p>
+  <video width="100%" controls>
+    <source src="videos/Scenarios 1 - demo.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</section>
