--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <header>
-    <h1>sanpo</h1>
+    <a href="index.html">
+  <h1>Sanpo</h1>
+</a>
+
     <p>exploring tokyo's neighborhoods</p>
     <nav>
       <a href="#">about</a>
