--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
   <header>
-    <a href="index.html">
-  <h1>Sanpo</h1>
-</a>
-
+    <h1><a href="index.html">sanpo</a></h1>
     <p>exploring tokyo's neighborhoods</p>
     <nav>
       <a href="#">about</a>
