--- a/download.html
+++ b/download.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>sanpo</h1>
+    <h1><a href="index.html">sanpo</a></h1>
     <p>exploring tokyo's neighborhoods</p>
   </header>
 
