--- a/development.html
+++ b/development.html
@@ -37,3 +37,11 @@
     Your browser does not support the video tag.
   </video>
 </section>
+  <section>
+  <h2><strong>Quick Translations</strong></h2>
+  <p>Use easy and quick translations. These are common, kind, and natural translations. Just simply show your device to whoever you may need to - whether it's a station worker or staff member.</p>
+  <video width="100%" controls>
+    <source src="Quick Translations - demo.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</section>
