--- a/about.html
+++ b/about.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About – Sanpo</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <h1><a href="index.html">sanpo</a></h1>
+    <p>exploring tokyo's neighborhoods</p>
+  </header>
 
+  <main class="about-content">
+    <h2>About</h2>
+    <p>
+      Japan is expecting 60 million annual tourists by 2030 — a dramatic rise that brings both excitement and concern. Many travelers feel anxious about visiting a country known for its quiet public spaces, strict etiquette, and nuanced social rules. At the same time, residents often feel overwhelmed by the growing crowds and cultural friction. Sanpo is for travelers who want to go the extra mile — those who care about respecting the places they visit and the people who live there. It’s not just an app, but a mindset: a way to ease both sides of the experience by promoting awareness, etiquette, and confidence. Rather than offer typical tourist lists, Sanpo focuses on real-world situations — ordering at a ramen shop, riding public transportation, visiting a shrine, navigating a konbini — and gives you the tools to handle them gracefully. Think: quick etiquette rundowns, essential phrases, sound-bytes, and visual aids to help bridge the communication gap.
+The mission is twofold: support travelers in having a more authentic, stress-free experience, and help locals feel understood and respected. Beyond that, Sanpo encourages exploration beyond the usual hotspots — because every neighborhood in Japan has something to offer, and it’s time we spread the love more evenly.
+    </p>
+  </main>
+</body>
+</html>
