--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <h1><a href="index.html">sanpo</a></h1>
     <p>exploring tokyo's neighborhoods</p>
     <nav>
-      <a href="#">about</a>
+      <a href="about.html">about</a>
       <a href="development.html">development</a>
       <a href="download.html">download</a>
     </nav>
   </header>
-<main>
-  <p class="photo-note">(higher quality photo coming soon)</p>
-  <div class="photo-container">
-    <img src="webpage-photo.png" alt="Sanpo preview" />
-  </div>
-</main>
+  <main>
+    <p class="photo-note">(higher quality photo coming soon)</p>
+    <div class="photo-container">
+      <img src="webpage-photo.png" alt="Sanpo preview" />
+    </div>
+  </main>
 </body>
 </html>
