--- a/development.html
+++ b/development.html
@@ -10,6 +10,11 @@
   <header>
     <h1><a href="index.html">sanpo</a></h1>
     <p>exploring tokyo's neighborhoods</p>
+     <nav>
+      <a href="about.html">about</a>
+      <a href="development.html">development</a>
+      <a href="download.html">download</a>
+    </nav>
   </header>
 <main class="development-content">
   <h2>What's Nearby</h2>
